--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,33 +1,27 @@
 spring.application.name=cruella
 
-# contextPath 등록
+# contextPath 등록
 server.servlet.context-path=/cruella
 
-# 사용할 포트번호 수정
+# 사용할 포트번호 수정
 server.port=8888
 
-# 응답뷰 관련한 prefix, suffix
+# 응답뷰 관련한 prefix, suffix : servlet-context.xml의 ViewResolver 빈등록 설정
 spring.mvc.view.prefix=/WEB-INF/views/
 spring.mvc.view.suffix=.jsp
 
-# 마이바티스, 연결 db 정보 관련 두문 등록
-#spring.datasource.driver-class-name=net.sf.log4jdbc.sql.jdbcapi.DriverSpy
-#spring.datasource.url=jdbc:log4jdbc:oracle:thin:@localhost:1521:xe
-#spring.datasource.username=spring
-#spring.datasource.password=spring
-
+# 연결 db 정보 관련 구문 등록
 spring.datasource.driver-class-name=net.sf.log4jdbc.sql.jdbcapi.DriverSpy
 spring.datasource.url=jdbc:log4jdbc:oracle:thin:@13.125.128.181:1521:xe
 spring.datasource.username=cruella
 spring.datasource.password=cruella
 spring.datasource.hikari.maximum-pool-size=1
 
-
 # 마이바티스 관련 구문 등록 (기존에 mybatis-config.xml 파일 내용)
 mybatis.mapper-locations=mybatis/mappers/*.xml
 mybatis.type-aliases-package=com.br.cruella.dto
 mybatis.configuration.jdbc-type-for-null=NULL
 
-# 파일업로드 위한 구문 등록
+# 파일업로드 위한 구문 등록
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=100MB
