--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,7 +19,7 @@ spring.datasource.hikari.maximum-pool-size=1
 
 # 마이바티스 관련 구문 등록 (기존에 mybatis-config.xml 파일 내용)
 mybatis.mapper-locations=mybatis/mappers/*.xml
-mybatis.type-aliases-package=com.br.cruella.dto
+mybatis.type-aliases-package=com.cl.cruella.dto
 mybatis.configuration.jdbc-type-for-null=NULL
 
 # 파일업로드 위한 구문 등록
