--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,27 +1,27 @@
 spring.application.name=cruella
 
-# contextPath 등록
+# contextPath ë±ë¡Â
 server.servlet.context-path=/cruella
 
-# 사용할 포트번호 수정
+# ì¬ì©í  í¬í¸ë²í¸ ìì Â
 server.port=8888
 
-# 응답뷰 관련한 prefix, suffix : servlet-context.xml의 ViewResolver 빈등록 설정
+# ìëµë·° ê´ë ¨í prefix, suffix : servlet-context.xmlì ViewResolver ë¹ë±ë¡ ì¤ì 
 spring.mvc.view.prefix=/WEB-INF/views/
 spring.mvc.view.suffix=.jsp
 
-# 연결 db 정보 관련 구문 등록
+# DB 연동 하는 구문들 5개
 spring.datasource.driver-class-name=net.sf.log4jdbc.sql.jdbcapi.DriverSpy
 spring.datasource.url=jdbc:log4jdbc:oracle:thin:@13.125.128.181:1521:xe
 spring.datasource.username=cruella
 spring.datasource.password=cruella
 spring.datasource.hikari.maximum-pool-size=1
 
-# 마이바티스 관련 구문 등록 (기존에 mybatis-config.xml 파일 내용)
+# ë§ì´ë°í°ì¤ ê´ë ¨ êµ¬ë¬¸ ë±ë¡ (ê¸°ì¡´ì mybatis-config.xml íì¼ ë´ì©)
 mybatis.mapper-locations=mybatis/mappers/*.xml
 mybatis.type-aliases-package=com.cl.cruella.dto
 mybatis.configuration.jdbc-type-for-null=NULL
 
-# 파일업로드 위한 구문 등록
+# íì¼ìë¡ë ìí êµ¬ë¬¸ ë±ë¡Â
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=100MB
