--- a/pom.xml
+++ b/pom.xml
@@ -119,6 +119,15 @@
 		</dependency>
 		
 		
+		<!-- * Jackson  -->
+    	<dependency>
+    		<groupId>com.fasterxml.jackson.core</groupId>
+    		<artifactId>jackson-databind</artifactId>
+    		
+		</dependency>
+		
+		
+		
 		
 		
 		
