--- a/pom.xml
+++ b/pom.xml
@@ -126,8 +126,17 @@
     		
 		</dependency>
 		
-		
-		
+		<!-- stomp -->
+			<dependency>
+			   <groupId>org.webjars</groupId>
+			   <artifactId>sockjs-client</artifactId>
+			   <version>1.1.2</version>
+			</dependency>
+			<dependency>
+			   <groupId>org.webjars</groupId>
+			   <artifactId>stomp-websocket</artifactId>
+			   <version>2.3.3-1</version>
+			</dependency>
 		
 		
 		
