--- a/pom.xml
+++ b/pom.xml
@@ -138,6 +138,11 @@
 			   <version>2.3.3-1</version>
 			</dependency>
 		
+		<!-- smtp(mail) -->
+		<dependency>
+	    <groupId>org.springframework.boot</groupId>
+	    <artifactId>spring-boot-starter-mail</artifactId>
+		</dependency>
 		
 		
 	</dependencies>
