--- a/pom.xml
+++ b/pom.xml
@@ -151,6 +151,13 @@
 		  <version>20230227</version>
 		</dependency>
 		
+    <!-- Java Object를 Json 문자열로 변환할 수 있고, Json 문자열을 Java Object로 변환 -->
+    <dependency>
+        <groupId>com.google.code.gson</groupId>
+        <artifactId>gson</artifactId>
+    </dependency>
+
+		
 	</dependencies>
 
 	<build>
