refactor 근태캘린더
reafactor 근태캘린더

- 근태캘린더 결근표시 스타일 보완

--- a/pom.xml
+++ b/pom.xml
@@ -151,6 +151,11 @@
 		  <version>20230227</version>
 		</dependency>
 		
+		<!-- schedule -->
+		<dependency>
+		    <groupId>org.springframework.boot</groupId>
+		    <artifactId>spring-boot-starter</artifactId>
+		</dependency>		
 	</dependencies>
 
 	<build>
