--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -34,3 +34,5 @@ spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.ssl.enable=true
 spring.mail.properties.mail.smtp.starttls.enable=false
 spring.mail.properties.mail.smtp.ssl.trust=smtp.gmail.com
+
+spring.task.scheduling.enabled=true
